# phys

./: .gitignore  pyproject.toml  randtest.py
scripts/: celestial_test.py  earth-sun.py  plot.py  three-body.py
src/phys/: __init__.py  buffer.py  eng.py  obj.py  particle.py  sim.py  simulation.py
src/phys.egg-info/: PKG-INFO  SOURCES.txt
src/phys/entities/: __init__.py  particle.py
src/phys/entity/: __init__.py  particle.py
src/phys/forces/: __init__.py  electromagnetism.py  engine.py  gravity.py  interaction.py
src/phys/forces/electrical/: __init__.py
src/phys/forces/gravity/: __init__.py  engine.py  interaction.py
src/phys/forces/magnetism/: __init__.py
src/phys/integrators/: __init__.py  euler.py  integrator.py  leapfrog.py  symplectic.py
test/: test_buffer.py  test_engine.py  test_engines.py  test_forces.py  test_integrator.py  test_integrator_new.py  test_simulation.py
tool/: test.sh
