[project]
name = "phys"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "numpy"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
venv = ".venv"
venvPath = "."

